# sistemas-distribuidos-kafka

./: README.md
kafka/: Dockerfile.consumer  Dockerfile.producer  consumer.py  docker-compose.yaml  producer.py  pyproject.toml
