[tool.poetry]
name = "kafka-prod"
version = "0.1.0"
description = ""
authors = ["Matheus Sandrini Rossi <rossi@Matheuss-MacBook-Pro.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
kafka-python = "^2.0.2"
faker = "^28.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
